--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 html, body, #container {
-  height: 100%;
+  height: 97%;
 }
 
 .container-fluid {
@@ -23,6 +23,11 @@ textarea.form-control {
   height: 100%;
 }
 
+.outputPanel {
+	min-height: 100%;
+	height: 100%;
+	overflow: auto;
+}
 
 .github {
 	color: white;
